source/dev/styles/main.css
:root {
  --page-color: #fff200;
  --page-background: #25408f;
  --titlebar-size: 4rem;
  --title-color: #e6372a;
  --navbar-hover-color: #fff200;
  --navbar-hover-background: #e6372a;
  --flex-gap: 1rem;
  --person-width: 300px;
  --section-gap: 4rem;
  --text-width: 610px;
  --max-width: 1200px;
}

@font-face {
  font-family: "Archivo";
  src: url("fonts/Archivo-SemiBoldItalic.woff2") format("woff2"), url("fonts/Archivo-SemiBoldItalic.woff") format("woff");
  font-weight: 600;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "Archivo";
  src: url("fonts/Archivo-LightItalic.woff2") format("woff2"), url("fonts/Archivo-LightItalic.woff") format("woff");
  font-weight: 300;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "Archivo";
  src: url("fonts/Archivo-SemiBold.woff2") format("woff2"), url("fonts/Archivo-SemiBold.woff") format("woff");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Archivo";
  src: url("fonts/Archivo-Black.woff2") format("woff2"), url("fonts/Archivo-Black.woff") format("woff");
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Archivo";
  src: url("fonts/Archivo-Light.woff2") format("woff2"), url("fonts/Archivo-Light.woff") format("woff");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}
* {
  box-sizing: border-box;
}

html, body {
  margin: 0;
  color: var(--page-color);
  background-color: var(--page-background);
}

body {
  font-family: "Archivo", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 20px;
  line-height: 1.2em;
}

@media screen and (max-width: 800px) {
  body {
    font-size: 16px;
  }
}
a {
  color: inherit;
}

p:lang(it) {
  font-weight: 600;
}

p:lang(en) {
  font-weight: 300;
}

h1, h2 {
  font-weight: 300;
}

strong {
  font-weight: 600;
}

figure {
  margin: 0;
  display: block;
  width: 100%;
  outline: 1px solid var(--title-color);
}

figure img {
  display: block;
}

p.big {
  margin: 0;
  font-size: 2em;
  line-height: 1.6em;
}

@media screen and (max-width: 800px) {
  p.big {
    font-size: 1.2em;
  }
}
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  width: fit-content;
  background-color: var(--navbar-color);
  z-index: 9;
}

.navbar-head {
  display: flex;
  justify-content: center;
  align-items: center;
  width: var(--titlebar-size);
  height: var(--titlebar-size);
}

.navbar-body {
  display: none;
}

.navbar.is-active {
  background-color: var(--page-color);
}

.navbar.is-active .navbar-body {
  display: flex;
  flex-direction: column;
  width: 300px;
  min-height: calc(100vh - var(--titlebar-size));
}

@media screen and (max-width: 800px) {
  .navbar.is-active .navbar-body {
    width: 100vw;
  }
}
.navbar hr {
  margin: -1px 1em;
  height: 1px;
  border: 0;
  background-color: var(--title-color);
  width: calc(100% - 2em);
}

.navbar-item {
  display: block;
  padding: 1rem;
  font-size: 1rem;
  text-decoration: none;
  color: var(--title-color);
}

.navbar-item .prefix {
  display: inline-block;
  width: 1em;
  font-weight: 900;
}

.navbar-item:hover {
  color: var(--navbar-hover-color);
  background-color: var(--navbar-hover-background);
}

.navbar-burger {
  cursor: pointer;
  display: inline-flex;
  flex-direction: column;
  justify-content: space-around;
  width: 28px;
  height: 24px;
  background: transparent;
  border: none;
  padding: 0;
}

.navbar-burger span {
  display: block;
  width: 100%;
  height: 2px;
  background-color: var(--title-color);
  transition: all 0.3s ease;
  transform-origin: center;
}

.navbar.is-active .navbar-burger span:nth-child(1) {
  transform: rotate(45deg) translate(6px, 6px);
}

.navbar.is-active .navbar-burger span:nth-child(2) {
  opacity: 0;
}

.navbar.is-active .navbar-burger span:nth-child(3) {
  transform: rotate(-45deg) translate(5px, -5px);
}

.pagetitle {
  position: fixed;
  display: flex;
  justify-content: end;
  align-items: center;
  padding-right: calc(var(--titlebar-size));
  padding-top: 0;
  padding-bottom: 0;
  margin: 0;
  height: var(--titlebar-size);
  width: 100vh;
  top: 100vh;
  left: 0;
  transform-origin: left top;
  transform: rotate(-90deg);
  font-size: 1.2em;
  font-weight: 300;
  line-height: 0.5em;
  color: var(--title-color);
  background-color: var(--page-background);
  z-index: 1;
}

.pagetitle .prefix {
  margin-right: 0.25em;
  font-weight: 600;
}

.subtitle {
  color: var(--title-color);
  text-align: center;
}

.pagebody {
  margin-top: 0;
  margin-left: var(--titlebar-size);
  padding: 0 1rem 0 1px;
}

.pagebody section {
  margin: 0 auto;
  max-width: var(--max-width);
}

.section {
  display: flex;
  flex-direction: row;
  gap: var(--flex-gap);
  flex-wrap: wrap;
  width: 100%;
}

.section + .section {
  margin-top: var(--section-gap);
}

.section.collapse-margin .section {
  margin-top: 0;
}

.section img {
  display: block;
  width: 100%;
  height: auto;
}

.section.gapless {
  gap: 0;
}

.section.one-up .content {
  margin: 0 auto;
  max-width: var(--text-width);
}

.section.one-up.gapless .content {
  margin: 0;
  width: 100%;
  max-width: none;
}

.section.two-up .content {
  flex: 0 0 calc(50% - var(--flex-gap) / 2);
}

.section.two-up.gapless .content {
  flex: 0 0 50%;
}

.section.three-up .content {
  flex: 0 0 calc(33.3333333333% - var(--flex-gap));
}

.section.three-up.gapless .content {
  flex: 0 0 33.3333333333%;
}

@media screen and (max-width: 800px) {
  .section {
    flex-direction: column;
  }
  .section.one-up .content,
  .section.two-up .content,
  .section.three-up .content {
    flex: 1;
  }
}
.intro {
  position: relative;
  margin: 4em auto 4em auto;
  max-width: var(--text-width);
}

.titlegraphic {
  position: relative;
  height: 1px;
  margin-bottom: 110%;
}

.titlegraphic img {
  position: absolute;
  top: -175%;
  left: -50%;
  width: 150%;
}

.section.pagenav {
  display: flex;
  justify-content: space-between;
  margin: 4em auto;
  max-width: var(--max-width);
}

.button {
  display: flex;
  align-items: center;
  padding: 0 1em;
  border-radius: 1.5em;
  height: 3em;
  text-decoration: none;
}

.button:hover {
  outline: 1px solid currentColor;
}

.button.prev svg {
  display: block;
  width: 1em;
  height: 1em;
  transform: scale(1.2);
  margin-right: 0.25em;
}

.button.next svg {
  display: block;
  width: 1em;
  height: 1em;
  transform: scale(1.2);
  margin-left: 0.25em;
}

@media screen and (max-width: 800px) {
  .section.pagenav span {
    display: none;
    background-color: lime;
  }
  .button.next svg,
  .button.prev svg {
    transform: scale(2);
  }
  .section.pagenav {
    flex-direction: row;
    font-size: 0.9em;
  }
}
.section.people {
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  gap: 1rem;
  flex-wrap: wrap;
}

.person {
  padding: 2em;
  width: fit-content;
}

.headshot {
  width: 12em;
  position: relative;
}

.headshot-img {
  width: 100%;
  border: 3px solid #25408f;
  border-radius: 50%;
  overflow: hidden;
}

.headshot-img img {
  display: block;
  width: 100%;
  height: auto;
}

.headshot-name {
  position: absolute;
  color: rgb(229.5, 217.8, 0);
  bottom: 8%;
  left: 50%;
  width: 75%;
  font-size: 18px;
  line-height: 0.75em;
  font-weight: 900;
}

.bio-title {
  font-weight: 600;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: -2em;
  width: 16em;
  min-height: 3.6em;
  text-align: center;
}

@media screen and (max-width: 800px) {
  .person {
    padding: 0.5em;
  }
  .bio-title {
    margin-bottom: 0;
  }
}
.bio-text {
  margin-left: 1.5em;
}

.figure-bordered {
  outline: none;
}

.figure-bordered img {
  outline: 1px solid #e6372a;
}

.figure-bordered figcaption,
.figure-bordered figcaption p {
  font-size: 1.2em;
  font-weight: 600;
}

figure {
  position: relative;
}

figure .credit {
  display: none;
}

figure:hover .credit {
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  font-size: 10px;
  padding: 0.2em 1em;
  color: #fff200;
  background-color: #25408f;
}

.document-link {
  display: flex;
  text-decoration: none;
}

.document-link:hover {
  text-decoration: underline;
}

.document-link svg {
  margin-right: 0.5em;
}

.constructing-diagram {
  position: relative;
}

.constructing-diagram img {
  display: block;
  position: relative;
  top: 0;
  left: 0;
}

.marker {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid #e6372a;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  color: #fff200;
  background-color: #e6372a;
  text-decoration: none;
  transform: translate(-50%, -50%);
}

.marker .detail {
  opacity: 0;
  position: absolute;
  top: -1.5rem;
  color: #e6372a;
  font-size: 0.85em;
  white-space: nowrap;
}

.marker.d .detail {
  top: 2rem;
}

.marker:hover {
  color: #e6372a;
  background-color: #fff200;
}

.marker:hover .detail {
  opacity: 1;
}

.marker.a {
  left: 18.5%;
  top: 12%;
}

.marker.b {
  left: 35.9%;
  top: 12%;
}

.marker.c {
  left: 60%;
  top: 12%;
}

.marker.d {
  left: 85.5%;
  top: 88%;
}

.constucting-title {
  margin: 4em 0;
}

.leaflet-bar span {
  color: #25408f;
}

/*# sourceMappingURL=main.css.map */

